--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,60 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3 {
+  margin: 0;
+  padding: 0;
+}
+textarea {
+  width: 100%; height: 8rem; border: 1px solid skyblue;
+  margin: 2rem 0;
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-family: monospace
+}
+.app {
+  width: 80%;
+  margin: 0 auto;
+}
+nav {
+  min-height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav h3 {
+  font-weight: bold;
+}
+.word {
+  margin: 0 .2rem 0 0;
+  font-size: 1.2rem;
+}
+.color {
+  font-weight: bold;
+  color: blue;
+  background-color: lightgray;
+}
+.correct {
+  color: green;
+}
+.incorrect {
+  color: red;
+}
+.active {
+  font-weight: bold;
+}
+button {
+  border: 1px solid lightgray;
+  padding: .6rem;
+  text-transform: uppercase;
+  font-family: monospace;
+  color: black;
+  font-weight: bold;
+  cursor: pointer
+}
+.time-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: .5rem .2rem 0 0;
+  margin: 1.5rem 0;
 }
